[tool.poetry]
name = "til"
version = "0.1.0"
description = ""
authors = ["SongYunSeop <dbstjq91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "<6.0"
sphinx-sitemap = "^2.5.0"
myst-parser = "^0.18.1"
sphinx-rtd-theme = "^1.2.0"
sphinx-markdown-tables = "^0.0.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
